test-output.log

Running 1 test using 1 worker


=== PASSO 1: Abrir aplicação ===
[REQUEST] GET https://perceptive-possibility-production-f87c.up.railway.app/
[REQUEST] GET https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap
[REQUEST] GET https://perceptive-possibility-production-f87c.up.railway.app/assets/index-dF98BgHd.js
[REQUEST] GET https://perceptive-possibility-production-f87c.up.railway.app/assets/index-iPKU9K1J.css
[RESPONSE] 200 https://perceptive-possibility-production-f87c.up.railway.app/
[REQUEST] GET https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&display=swap
[RESPONSE] 200 https://perceptive-possibility-production-f87c.up.railway.app/assets/index-iPKU9K1J.css
[RESPONSE] 200 https://perceptive-possibility-production-f87c.up.railway.app/assets/index-dF98BgHd.js
[REQUEST] GET https://fonts.gstatic.com/s/dmsans/v17/rP2Hp2ywxg089UriCZOIHQ.woff2
[RESPONSE] 200 https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap
[RESPONSE] 200 https://fonts.googleapis.com/css2?family=Syne:wght@400;600;700;800&family=DM+Sans:wght@400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&display=swap
[REQUEST] GET https://perceptive-possibility-production-f87c.up.railway.app/api/projects
[REQUEST] GET https://perceptive-possibility-production-f87c.up.railway.app/api/metrics
[CONSOLE ERROR]: Failed to load dashboard data: SyntaxError: Unexpected token '<', "<!DOCTYPE "... is not valid JSON
[RESPONSE] 200 https://perceptive-possibility-production-f87c.up.railway.app/api/metrics
[RESPONSE] 200 https://perceptive-possibility-production-f87c.up.railway.app/api/projects
[RESPONSE] 200 https://fonts.gstatic.com/s/dmsans/v17/rP2Hp2ywxg089UriCZOIHQ.woff2
[REQUEST] GET https://fonts.gstatic.com/s/syne/v24/8vIH7w4qzmVxm2BL9A.woff2
[REQUEST] GET https://perceptive-possibility-production-f87c.up.railway.app/vite.svg
[RESPONSE] 200 https://perceptive-possibility-production-f87c.up.railway.app/vite.svg
[RESPONSE] 200 https://fonts.gstatic.com/s/syne/v24/8vIH7w4qzmVxm2BL9A.woff2
✓ Screenshot do dashboard inicial

=== PASSO 2: Verificar erros no console ===
❌ ENCONTRADOS 1 ERROS NO CONSOLE:

Erro 1: {
  "type": "error",
  "text": "Failed to load dashboard data: SyntaxError: Unexpected token '<', \"<!DOCTYPE \"... is not valid JSON",
  "location": {
    "url": "https://perceptive-possibility-production-f87c.up.railway.app/assets/index-dF98BgHd.js",
    "lineNumber": 211,
    "columnNumber": 2113
  }
}

=== PASSO 3: Verificar elementos da página ===
Botão "Novo Projecto": ✓ ENCONTRADO

=== PASSO 4: Clicar em "Novo Projecto" ===
✓ Screenshot do modal aberto

=== PASSO 5: Preencher formulário ===
Campo de descrição: ✓ ENCONTRADO
✓ Descrição preenchida
✓ Screenshot do formulário preenchido

=== PASSO 6: Submeter formulário ===
Botão de submit: ✓ ENCONTRADO
  ✘  1 [chromium] › test-complete.spec.ts:16:7 › DevForge - Teste Completo › Teste completo do fluxo de criação de projecto (1.0m)


  1) [chromium] › test-complete.spec.ts:16:7 › DevForge - Teste Completo › Teste completo do fluxo de criação de projecto 

    [31mTest timeout of 60000ms exceeded.[39m

    Error: locator.click: Test timeout of 60000ms exceeded.
    Call log:
    [2m  - waiting for locator('button[type="submit"], button:has-text("Criar"), button:has-text("Create")').first()[22m
    [2m    - locator resolved to <button class="btn-primary">…</button>[22m
    [2m  - attempting click action[22m
    [2m    2 × waiting for element to be visible, enabled and stable[22m
    [2m      - element is visible, enabled and stable[22m
    [2m      - scrolling into view if needed[22m
    [2m      - done scrolling[22m
    [2m      - <input type="text" required="" class="input" placeholder="Ex: Site da empresa..." value="Sistema de gestão de inventário com alertas de stock baixo"/> from <div class="fixed inset-0 bg-black/50 z-50 flex items-center justify-center p-4">…</div> subtree intercepts pointer events[22m
    [2m    - retrying click action[22m
    [2m    - waiting 20ms[22m
    [2m    2 × waiting for element to be visible, enabled and stable[22m
    [2m      - element is visible, enabled and stable[22m
    [2m      - scrolling into view if needed[22m
    [2m      - done scrolling[22m
    [2m      - <input type="text" required="" class="input" placeholder="Ex: Site da empresa..." value="Sistema de gestão de inventário com alertas de stock baixo"/> from <div class="fixed inset-0 bg-black/50 z-50 flex items-center justify-center p-4">…</div> subtree intercepts pointer events[22m
    [2m    - retrying click action[22m
    [2m      - waiting 100ms[22m
    [2m    106 × waiting for element to be visible, enabled and stable[22m
    [2m        - element is visible, enabled and stable[22m
    [2m        - scrolling into view if needed[22m
    [2m        - done scrolling[22m
    [2m        - <input type="text" required="" class="input" placeholder="Ex: Site da empresa..." value="Sistema de gestão de inventário com alertas de stock baixo"/> from <div class="fixed inset-0 bg-black/50 z-50 flex items-center justify-center p-4">…</div> subtree intercepts pointer events[22m
    [2m      - retrying click action[22m
    [2m        - waiting 500ms[22m


      163 |           const requestsBefore = networkRequests.length;
      164 |
    > 165 |           await submitButton.click();
          |                              ^
      166 |           console.log('✓ Botão submit clicado');
      167 |
      168 |           // Esperar por novos requests
        at /Users/diogoloureiro/devforge-v2/test-complete.spec.ts:165:30

    attachment #1: screenshot (image/png) ──────────────────────────────────────────────────────────
    test-results/test-complete-DevForge---T-4c24f-luxo-de-criação-de-projecto-chromium/test-failed-1.png
    ────────────────────────────────────────────────────────────────────────────────────────────────

    attachment #2: video (video/webm) ──────────────────────────────────────────────────────────────
    test-results/test-complete-DevForge---T-4c24f-luxo-de-criação-de-projecto-chromium/video.webm
    ────────────────────────────────────────────────────────────────────────────────────────────────

    Error Context: test-results/test-complete-DevForge---T-4c24f-luxo-de-criação-de-projecto-chromium/error-context.md

    attachment #4: trace (application/zip) ─────────────────────────────────────────────────────────
    test-results/test-complete-DevForge---T-4c24f-luxo-de-criação-de-projecto-chromium/trace.zip
    Usage:

        npx playwright show-trace test-results/test-complete-DevForge---T-4c24f-luxo-de-criação-de-projecto-chromium/trace.zip

    ────────────────────────────────────────────────────────────────────────────────────────────────

  1 failed
    [chromium] › test-complete.spec.ts:16:7 › DevForge - Teste Completo › Teste completo do fluxo de criação de projecto 
